src/objects/HR_Case__c.object
<CustomObject>
    <description>Object to store the records of the HRM Case management application for OCPO.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Caution - Limit to 250 characters and may be viewed by others.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>For OIG Cases</description>
        <label>Disposition</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HRM_Action_Appealed__c</fullName>
        <label>Action Appealed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Arbitration_Case_No__c</fullName>
        <label>PO Case #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_Assigned_Legal_Counsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Legal Counsel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Cases (Assigned Legal Counsel)</relationshipLabel>
        <relationshipName>CPO_Assigned_Legal_Counsel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_Assigned_Office_Code__c</fullName>
        <label>Assigned Office Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A	Ofc of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AC	Ofc of the Admin./Office of the Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>AD	Ofc of the Admin./Office of the Deputy Administrator</fullName>
                </value>
                <value>
                    <fullName>G	CBCA/GSA Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>GA	CBCA/Staff Support Division</fullName>
                </value>
                <value>
                    <fullName>GJ	CBCA/Judicial Division</fullName>
                </value>
                <value>
                    <fullName>B	CFO-Ofc of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>BB	CFO/Office of Budget</fullName>
                </value>
                <value>
                    <fullName>BC	CFO/Ofc of Financial Policy &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>BF	CFO/Office of FAS Financial Services</fullName>
                </value>
                <value>
                    <fullName>BI	CFO/Ofc of Financial Info &amp; Data Analytics</fullName>
                </value>
                <value>
                    <fullName>BP	CFO/Office of PBS Financial Services</fullName>
                </value>
                <value>
                    <fullName>I	CIO-Ofc of the Chief Info Officer</fullName>
                </value>
                <value>
                    <fullName>IA	CIO/Office of Enterprise Solutions</fullName>
                </value>
                <value>
                    <fullName>IB	CIO/Ofc of Financial and HR IT Services</fullName>
                </value>
                <value>
                    <fullName>ID	CIO/Office of the Deputy CIO</fullName>
                </value>
                <value>
                    <fullName>IE	CIO/Office of Enterprise Mngt Services</fullName>
                </value>
                <value>
                    <fullName>IO	CIO/Office of Enterprise Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IP	CIO/Ofc of Public Bldg IT Services</fullName>
                </value>
                <value>
                    <fullName>IQ	CIO/Ofc of Acquisition IT Services</fullName>
                </value>
                <value>
                    <fullName>IR	CIO/Resources Management Staff</fullName>
                </value>
                <value>
                    <fullName>IS	CIO/Ofc of the Chief Info Security Officer</fullName>
                </value>
                <value>
                    <fullName>Q	FAS/Ofc of FAS Commsr</fullName>
                </value>
                <value>
                    <fullName>Q0A	FAS/Ofc of FAS Commsr/Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>Q0B	FAS/Ofc of FAS Commsr/Office of Strategic Innovations</fullName>
                </value>
                <value>
                    <fullName>Q1	FAS/Ofc of FAS Commsr/Deputy Commissioner</fullName>
                </value>
                <value>
                    <fullName>QC	FAS/Ofc of Cust Accounts &amp; Research</fullName>
                </value>
                <value>
                    <fullName>QD	FAS/Ofc of Integrated Award Environment</fullName>
                </value>
                <value>
                    <fullName>QF	FAS/Ofc of Assisted Acquisition Svs</fullName>
                </value>
                <value>
                    <fullName>QM	FAS/Ofc of Trvl,Motor Vech &amp; Card Svcs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Assigned_Organization_Code__c</fullName>
        <label>Assigned Organization Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>CBCA</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 1</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 10</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 11</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 2</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 3</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 4</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 5</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 6</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 7</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 8</fullName>
                </value>
                <value>
                    <fullName>FAS-RC 9</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
                <value>
                    <fullName>OCIA</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>OCR</fullName>
                </value>
                <value>
                    <fullName>OCSIT</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OGP</fullName>
                </value>
                <value>
                    <fullName>OHRM</fullName>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>OMA</fullName>
                </value>
                <value>
                    <fullName>OSBU</fullName>
                </value>
                <value>
                    <fullName>PBS</fullName>
                </value>
                <value>
                    <fullName>PBS-RC 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Assigned_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Cases (HSSO Point of Contact)</relationshipLabel>
        <relationshipName>HR_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_Assigned_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPO_Assigned_Specialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_BU_Status__c</fullName>
        <label>BU Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HRM_Bargaining_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AFGE</fullName>
                </value>
                <value>
                    <fullName>NFFE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Bargaining_Unit__c</fullName>
        <label>Bargaining Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Case_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_Charge_Violation_Description__c</fullName>
        <inlineHelpText>Caution - Limit to 1500 characters and may be viewed by others.</inlineHelpText>
        <label>Charge/Violation Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HRM_Charge_Violation_Type__c</fullName>
        <label>Charge/Violation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conduct – Absence without Leave</fullName>
                </value>
                <value>
                    <fullName>Conduct – Alcohol Abuse</fullName>
                </value>
                <value>
                    <fullName>Conduct – Conflict of Interest</fullName>
                </value>
                <value>
                    <fullName>Conduct – Credit Card Misuse/Payment</fullName>
                </value>
                <value>
                    <fullName>Conduct – Credit Card Misuse/Purchase</fullName>
                </value>
                <value>
                    <fullName>Conduct – Credit Card Misuse/Travel</fullName>
                </value>
                <value>
                    <fullName>Conduct – Denial of Security Clearance</fullName>
                </value>
                <value>
                    <fullName>Conduct – Disorderly Conduct</fullName>
                </value>
                <value>
                    <fullName>Conduct – Driving under the Influence</fullName>
                </value>
                <value>
                    <fullName>Conduct – Ethics Violation</fullName>
                </value>
                <value>
                    <fullName>Conduct – Failure to follow instructions</fullName>
                </value>
                <value>
                    <fullName>Conduct–Failure to Participate w/Investn</fullName>
                </value>
                <value>
                    <fullName>Conduct – Failure to Report Fraud/W/A</fullName>
                </value>
                <value>
                    <fullName>Conduct – Falsification</fullName>
                </value>
                <value>
                    <fullName>Conduct – Furloughs less than 30 days</fullName>
                </value>
                <value>
                    <fullName>Conduct – Illegal Drug Use</fullName>
                </value>
                <value>
                    <fullName>Conduct – Improper Contracting Practices</fullName>
                </value>
                <value>
                    <fullName>Conduct – Inability to Perform</fullName>
                </value>
                <value>
                    <fullName>Conduct – Inappropriate Behavior</fullName>
                </value>
                <value>
                    <fullName>Conduct – Inappropriate Dress</fullName>
                </value>
                <value>
                    <fullName>Conduct – Indebtedness</fullName>
                </value>
                <value>
                    <fullName>Conduct – Insubordination</fullName>
                </value>
                <value>
                    <fullName>Conduct – Lack of Candor/False Statement</fullName>
                </value>
                <value>
                    <fullName>Conduct – Leave Abuse</fullName>
                </value>
                <value>
                    <fullName>Conduct – Misuse/Loss of Govt. Property</fullName>
                </value>
                <value>
                    <fullName>Conduct – Misuse Government Funds</fullName>
                </value>
                <value>
                    <fullName>Conduct – Misuse of Government Vehicle</fullName>
                </value>
                <value>
                    <fullName>Conduct – Misuse of Public Office</fullName>
                </value>
                <value>
                    <fullName>Conduct – Neglect of Duty</fullName>
                </value>
                <value>
                    <fullName>Conduct – Off Duty Misconduct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Concurrence_Recd_from_MGMT__c</fullName>
        <label>Draft Concurrence Received from MGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Credit_Card_Case__c</fullName>
        <label>Credit Card Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Date_Additional_Medical_Received__c</fullName>
        <label>Date Additional Medical Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Additional_Medical_Requested__c</fullName>
        <label>Date Additional Medical Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Admin_Investigation_Begins__c</fullName>
        <label>Date Admin Investigation Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Admin_Investigation_Ends__c</fullName>
        <label>Date Admin Investigation Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Admin_Investigation_to_MGMT__c</fullName>
        <label>Date Admin Investigation to MGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Case_Closed__c</fullName>
        <label>Date Case Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Employee_Response_Due__c</fullName>
        <label>Date Employee Response Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_FOH_Medical_Returned__c</fullName>
        <label>Date FOH Medical Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_FOH_Medical_Submitted__c</fullName>
        <label>Date FOH Medical Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Initial_Draft_to_MGMT__c</fullName>
        <label>Date Initial Draft to MGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Initial_Prop_Draft_to_MGMT__c</fullName>
        <label>Date Initial Proposal Draft to MGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_LRO_Notified__c</fullName>
        <label>Date LRO Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_MGMT_HR_Agree_to_Action__c</fullName>
        <inlineHelpText>Enter date HR and Management agree to proceed with action.</inlineHelpText>
        <label>Date MGMT &amp; HR Agree to Decided Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_MGMT_HR_Agree_to_Prop_Action__c</fullName>
        <label>Date MGMT &amp; HR Agree to Proposed Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Medical_Received__c</fullName>
        <label>Date Medical Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Medical_Requested__c</fullName>
        <label>Date Medical Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_OGC_Returned_Draft__c</fullName>
        <label>Date OGC Returned Draft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_OGC_Returned_Prop_Draft__c</fullName>
        <label>Date OGC Returned Proposal Draft</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_PIN_Ends__c</fullName>
        <label>Date PIN Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_PIN_Issued__c</fullName>
        <label>Date PIN Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_PIP_Ends__c</fullName>
        <label>Date PIP Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_PIP_Issued__c</fullName>
        <label>Date PIP Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Proposal_Final_Letter_to_Sup__c</fullName>
        <label>Date Proposal Final Letter to Supervisor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_ROI_Issued_by_OIG__c</fullName>
        <label>Date ROI Issued by OIG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Received__c</fullName>
        <inlineHelpText>Enter date received by CPO.</inlineHelpText>
        <label>Date Case Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Received_by_MGMT__c</fullName>
        <inlineHelpText>Enter date received by management, if applicable.</inlineHelpText>
        <label>Date Received by MGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Reconsideration_Decision_Issued__c</fullName>
        <label>Date Reconsideration Decision Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_Reconsideration_Received__c</fullName>
        <label>Date Reconsideration Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_WIGI_Due__c</fullName>
        <label>Date WIGI Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_of_Appeal__c</fullName>
        <label>Date of Appeal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_of_Arbitration_Decision__c</fullName>
        <label>Date of Appeal Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_of_Arbitration_Hearing__c</fullName>
        <label>Date of Appeal Hearing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_of_Final_Letter_to_Supervisor__c</fullName>
        <inlineHelpText>Date submitted to supervisor for issuance to employee/union.</inlineHelpText>
        <label>Date Final Decision Letter to Supervisor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_to_OGC_for_Concurrence__c</fullName>
        <label>Date to OGC for Concurrence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Date_to_OGC_for_Prop_Concurrence__c</fullName>
        <label>Date to OGC for Proposal Concurrence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Decided_Type_of_Action__c</fullName>
        <label>Decided Type of Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Warning Notice</fullName>
                </value>
                <value>
                    <fullName>Reprimand</fullName>
                </value>
                <value>
                    <fullName>Suspension</fullName>
                </value>
                <value>
                    <fullName>Removal</fullName>
                </value>
                <value>
                    <fullName>Demotion</fullName>
                </value>
                <value>
                    <fullName>PIN</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>Reassignment</fullName>
                </value>
                <value>
                    <fullName>Denial WIGI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Deciding_Official_RMO__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Enter Last Name, First Name</inlineHelpText>
        <label>Deciding Official/RMO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Cases (Deciding Official/RMO)</relationshipLabel>
        <relationshipName>CPO_Deciding_Official_RMO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_Disposition_of_Appeal__c</fullName>
        <label>Disposition of Appeal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Sustained</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Draft_P_Concurrence_Received_from_MG__c</fullName>
        <label>Draft Proposal Concur Received from MGMT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Ethical_Conduct_Violation__c</fullName>
        <inlineHelpText>Cite type (a-m based on ethical regulations)</inlineHelpText>
        <label>Is this an Ethical Conduct Violation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Expedited_Greviance__c</fullName>
        <label>Expedited Grievance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Final_Decision_Letter_to_Emp_Union__c</fullName>
        <label>Final Decision Letter to Employee/Union</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Final_Proposal_Ltr_to_Employee_Union__c</fullName>
        <label>Final Proposal Letter to Employee/Union</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HRM_Grievance_Arbitration_Issue__c</fullName>
        <label>Grievance/Arbitration Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absence without Leave (AWOL)</fullName>
                </value>
                <value>
                    <fullName>Administrative Leave</fullName>
                </value>
                <value>
                    <fullName>Alternative Work Schedule</fullName>
                </value>
                <value>
                    <fullName>Award</fullName>
                </value>
                <value>
                    <fullName>Change in Working Condition</fullName>
                </value>
                <value>
                    <fullName>Denial of Within Grade Increase</fullName>
                </value>
                <value>
                    <fullName>Drug Testing/Fitness for Duty</fullName>
                </value>
                <value>
                    <fullName>Formal Discussion</fullName>
                </value>
                <value>
                    <fullName>Furlough for less than 30 days</fullName>
                </value>
                <value>
                    <fullName>Furlough for more than 30 days</fullName>
                </value>
                <value>
                    <fullName>Leave Issue</fullName>
                </value>
                <value>
                    <fullName>Leave Restriction</fullName>
                </value>
                <value>
                    <fullName>Letter of Reprimand</fullName>
                </value>
                <value>
                    <fullName>Letter of Warning</fullName>
                </value>
                <value>
                    <fullName>Pay Related Issue</fullName>
                </value>
                <value>
                    <fullName>Performance Improvement Notice</fullName>
                </value>
                <value>
                    <fullName>Performance Improvement Plan</fullName>
                </value>
                <value>
                    <fullName>Performance Plan/Elements</fullName>
                </value>
                <value>
                    <fullName>Performance Rating/Appraisal</fullName>
                </value>
                <value>
                    <fullName>Personnel Action</fullName>
                </value>
                <value>
                    <fullName>Reasonable Accommodation</fullName>
                </value>
                <value>
                    <fullName>Removal</fullName>
                </value>
                <value>
                    <fullName>Retaliation/Reprisal</fullName>
                </value>
                <value>
                    <fullName>Safety Issue</fullName>
                </value>
                <value>
                    <fullName>Security Clearance</fullName>
                </value>
                <value>
                    <fullName>Settlement/Last Chance</fullName>
                </value>
                <value>
                    <fullName>Sexual Harassment</fullName>
                </value>
                <value>
                    <fullName>Suspension less than 14 days</fullName>
                </value>
                <value>
                    <fullName>Suspension more than 14 days</fullName>
                </value>
                <value>
                    <fullName>Telework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_If_Decision_Suspension_No_of_Days__c</fullName>
        <label>If &quot;Decision - Suspension,&quot; # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_If_Other_Ethical_Violation__c</fullName>
        <label>If Other Ethical Violation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_If_Proposed_Suspension_No_of_Days__c</fullName>
        <label>If &quot;Proposed - Suspension,&quot; # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRM_Is_the_Employee_a_Supervisor__c</fullName>
        <label>Is the Employee a Supervisor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_NO_FEAR_Act_Case__c</fullName>
        <label>NO FEAR Act Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal Court</fullName>
                </value>
                <value>
                    <fullName>Non-Federal Court</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRM_Name_of_Arbitrator__c</fullName>
        <label>Name of AJ/Arbitrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_Named_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Named Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Cases (Named Employee)</relationshipLabel>
        <relationshipName>CPO_Named_Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_OIG_Case_Number__c</fullName>
        <label>OIG Case #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRM_OIG_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OIG Point of Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Cases (OIG Point of Contact)</relationshipLabel>
        <relationshipName>CPO_OIG_Point_of_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRM_Offense__c</fullName>
        <label>Offense</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>